# fm-ddr-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  COVERAGE.md  LICENSE  QUERIES.md  README.md  SECURITY.md  SNIPPET_FORMAT.md  deploy.sh  pyproject.toml
.claude/skills/ddr/: SKILL.md
.github/workflows/: ci.yml
fm_ddr/: __init__.py  cli.py  parse.py  report.py  resolve.sql  schema.sql  snippet.py
fm_ddr/skill/: COVERAGE.md  QUERIES.md  SKILL.md
fm_ddr/web/: _headers  about.html  index.html
helpers/: fm-snippet-helper.command  fm-snippet-helper.ps1  fm-snippet-watcher.sh  install.command  install.sh  uninstall.command
tests/: expected_snapshot.json  test_all.py
tests/fixtures/: micro_ddr.xml  micro_ddr_b.xml  micro_ddr_tm.xml
tests/parity/: run_js.mjs
