[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-ddr-analyzer"
version = "1.1.1"
description = "Parse FileMaker Database Design Reports into a queryable SQLite cross-reference database, with a zero-install browser viewer"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OOGI BV (Thomas De Smet)", email = "tdesmet@oogi.io" }]
requires-python = ">=3.10"
keywords = ["filemaker", "ddr", "database-design-report", "cross-reference", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

[project.urls]
Repository = "https://github.com/oogi-io/fm-ddr-analyzer"

[project.scripts]
fm-ddr = "fm_ddr.cli:main"

[tool.setuptools]
packages = ["fm_ddr"]

[tool.setuptools.package-data]
fm_ddr = ["*.sql", "web/index.html", "skill/SKILL.md"]
